--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -66,7 +66,10 @@ Style/OpenStructUse:
 Naming/MethodParameterName:
   AllowedNames:
     - cn
-
 Metrics/BlockLength:
   Enabled: false
+
+Metrics/MethodLength:
+  Enabled: true
+  Max: 15
 
